# expense_tracker_backend/src/routes/index.js
@@ -3,3 +3,4 @@ export { default as transactions } from './transactions.js';
 export { default as budgets } from './budgets.js';
 export { default as goals } from './goals.js';
 export { default as reports } from './reports.js';
+export { default as categories } from './categories.js';
